# Logger

./: CMakeLists.txt  build.sh  check.sh  logger.cpp  logger.h
src/: CMakeLists.txt  logger.cpp  logger.h
tests/: CMakeLists.txt  logger_test.cpp
